fix: downgrade vite to fix vercel permission issue

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-portfolio",
-  "version": "1.0.0", 
+  "version": "1.0.0",
   "private": false,
   "type": "module",
   "homepage": "https://md-mustafa786.github.io/Portfolio",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "npx vite build",
+    "preview": "vite preview", 
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
