--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": false,
   "type": "module",
   "homepage": "https://md-mustafa786.github.io/Portfolio",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview", 
+    "build": "node node_modules/vite/bin/vite.js build",
+    "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
