--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "vite",
+  "nodeVersion": "18.x",
   "rewrites": [
     {
       "source": "/(.*)",
