--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "type": "commonjs",
   "homepage": "https://md-mustafa786.github.io/Portfolio",
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=9.0.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "node node_modules/vite/bin/vite.js build",
+    "build": "vite build",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
   },
