--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "npm exec vite build",
+    "build": "node build.js",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
   },
