Downgrade to Vite 4.5.3 and use npm ci for clean installs

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "outputDirectory": "dist",
   "framework": "vite",
+  "installCommand": "npm ci",
   "rewrites": [
     {
       "source": "/(.*)",
